<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuItems"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />

        <item
            android:id="@+id/menuChat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />

        <item android:title="@string/about">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menuAbout"
                        android:icon="@drawable/ic_about"
                        android:title="@string/about_me" />
                    <item
                        android:id="@+id/menuAlgebra"
                        android:icon="@drawable/algebra_icon"
                        android:title="@string/algebra" />
                </group>
            </menu>
        </item>
    </group>

</menu>