<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".fragment.AlgebraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/algebra"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/tvAbout"
            android:textStyle="bold" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="@dimen/gridPadding"
        android:rowCount="3">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvCall"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="@dimen/cvMargin"
            android:layout_marginRight="@dimen/cvMargin"
            android:layout_marginBottom="@dimen/cvMargin"
            app:cardCornerRadius="@dimen/cvCornerRadius"
            app:cardElevation="@dimen/cvElevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/cvMargin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/call"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tvAboutCard"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLocation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="@dimen/cvMargin"
            android:layout_marginRight="@dimen/cvMargin"
            android:layout_marginBottom="@dimen/cvMargin"
            app:cardCornerRadius="@dimen/cvCornerRadius"
            app:cardElevation="@dimen/cvElevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/cvMargin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/where_we_at"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tvAboutCard"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="@dimen/cvMargin"
            android:layout_marginRight="@dimen/cvMargin"
            android:layout_marginBottom="@dimen/cvMargin"
            app:cardCornerRadius="@dimen/cvCornerRadius"
            app:cardElevation="@dimen/cvElevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/cvMargin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:src="@drawable/ic_mail" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mail"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tvAboutCard"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="@dimen/cvMargin"
            android:layout_marginRight="@dimen/cvMargin"
            android:layout_marginBottom="@dimen/cvMargin"
            app:cardCornerRadius="@dimen/cvCornerRadius"
            app:cardElevation="@dimen/cvElevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/cvMargin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:src="@drawable/ic_web" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/web"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/tvAboutCard"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>
